Fixes the search box overlapping with content when first shown

--- a/src/theme/book.css
+++ b/src/theme/book.css
@@ -1417,6 +1417,7 @@ mark.fade-out {
   margin-left: auto;
   margin-right: auto;
   max-width: 750px;
+  display: block;
 }
 #searchbar {
   width: 100%;
