--- a/src/theme/stylus/searchbar.styl
+++ b/src/theme/stylus/searchbar.styl
@@ -21,6 +21,7 @@ mark.fade-out {
     margin-left: auto;
     margin-right: auto;
     max-width: $content-max-width;
+    display: block;
 }
 
 #searchbar {
@@ -64,3 +65,4 @@ ul#searchresults {
         font-style: normal;
     }
 }
+
